--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,64 +1,64 @@
 site:
-  name: AstroWind
-  site: 'https://astrowind.vercel.app'
+  name: 'Olivier Nuber'
+  site: 'https://www.oliviernuber.com'
   base: '/'
   trailingSlash: false
 
-  googleSiteVerificationId: orcPxI47GSa-cRvY11tUe6iGg2IO_RPvnA1q95iEM3M
+  googleSiteVerificationId: false # orcPxI47GSa-cRvY11tUe6iGg2IO_RPvnA1q95iEM3M
 
 # Default SEO metadata
 metadata:
   title:
-    default: AstroWind
-    template: '%s — AstroWind'
-  description: "\U0001F680 Suitable for Startups, Small Business, Sass Websites, Professional Portfolios, Marketing Websites, Landing Pages & Blogs."
+    default: 'Olivier Nuber'
+    template: '%s — Olivier Nuber'
+  description: "\U0001F4F7 Olivier NUBER Photographe & Videaste professionnel à Nîmes"
   robots:
     index: true
     follow: true
   openGraph:
-    site_name: AstroWind
+    site_name: 'Olivier Nuber'
     images:
       - url: '~/assets/images/default.png'
         width: 1200
         height: 628
     type: website
   twitter:
-    handle: '@onwidget'
-    site: '@onwidget'
+    handle: '@OlivierNUBER'
+    site: '@OlivierNUBER'
     cardType: summary_large_image
 
 i18n:
-  language: en
+  language: fr
   textDirection: ltr
 
 apps:
   blog:
-    isEnabled: true
+    isEnabled: false
     postsPerPage: 6
 
     post:
-      isEnabled: true
+      isEnabled: false
       permalink: '/%slug%' # Variables: %slug%, %year%, %month%, %day%, %hour%, %minute%, %second%, %category%
       robots:
-        index: true
+        index: false
 
     list:
-      isEnabled: true
+      isEnabled: false
       pathname: 'blog' # Blog main path, you can change this to "articles" (/articles)
       robots:
-        index: true
+        index: false
 
     category:
-      isEnabled: true
+      isEnabled: false
       pathname: 'category' # Category main path /category/some-category, you can change this to "group" (/group/some-category)
       robots:
-        index: true
+        index: false
 
     tag:
-      isEnabled: true
+      isEnabled: false
       pathname: 'tag' # Tag main path /tag/some-tag, you can change this to "topics" (/topics/some-category)
       robots:
-        index: false
+        index: false # was false
 
     isRelatedPostsEnabled: true
     relatedPostsCount: 4
@@ -97,7 +97,8 @@ ui:
         default: rgb(247, 248, 248)
         heading: rgb(247, 248, 248)
         muted: rgb(200, 188, 208)
-        bgPage: rgb(3 6 32)
+        # bgPage: rgb(3 6 32)
+        bgPage: rgb(25 25 25)
         primary: rgb(29 78 216)
         secondary: rgb(30 58 138)
         accent: rgb(135 77 2267)
