--- a/src/config.yaml
+++ b/src/config.yaml
@@ -101,7 +101,8 @@ ui:
         bgPage: rgb(25 25 25)
         primary: rgb(29 78 216)
         secondary: rgb(30 58 138)
-        accent: rgb(135 77 2267)
+        # accent: rgb(135 77 2267) bug
+        accent: rgb(135 77 226)
         info: rgb(58 191 248)
         success: rgb(54 211 153)
         warning: rgb(251 189 35)
